# cTracer

./: CMakeLists.txt  README.md
libctracer/: CMakeLists.txt  ctracer.cpp  ctracer.h
libctracer/common/: CMakeLists.txt  common_def.h  common_log.h  stack.hpp  stack_warp.cpp  stack_warp.h  unwind_backtrace.cpp  unwind_backtrace.h  virtual_heap.cpp  virtual_heap.h
libctracer/hook/xHook/: CMakeLists.txt  xh_core.c  xh_elf.c  xh_log.c  xh_log.h  xh_util.c
libctracer/leakcheck/: CMakeLists.txt  hook_func.h  leakcheck_memory.cpp  leakcheck_memory.h
test/: CMakeLists.txt  main.cpp
